--- a/index.html
+++ b/index.html
@@ -42,8 +42,11 @@
 
   </div>
 </div>
-    <script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/gsap-latest-beta.min.js'></script>
-<script src='https://assets.codepen.io/16327/Flip.min.js'></script><script  src="./script.js"></script>
+
+
+<script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/gsap-latest-beta.min.js'></script>
+<script src='https://assets.codepen.io/16327/Flip.min.js'></script>
+<script src="./script.js"></script>
 
   </body>
   
